2021-2022 bowl pool, add all teams

--- a/bowl_pool/2021-2022/picks.html
+++ b/bowl_pool/2021-2022/picks.html
@@ -365,17 +365,30 @@ ul.auto-toc {
 
 <table border="1" class="docutils">
 <colgroup>
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
 </colgroup>
 <thead valign="bottom">
 <tr><th class="head">ID</th>
@@ -383,12 +396,25 @@ ul.auto-toc {
 <th class="head">Favorite</th>
 <th class="head">Underdog</th>
 <th class="head">Spread</th>
+<th class="head">#RealMamaBear</th>
+<th class="head">Bear-in-Law</th>
+<th class="head">Blue Orred</th>
+<th class="head">Bopper</th>
 <th class="head">Bumblerooski</th>
 <th class="head">Can't Stop a Badger!</th>
+<th class="head">D-Bo</th>
+<th class="head">Gigi</th>
+<th class="head">GlamKam</th>
 <th class="head">Knights of Ren</th>
 <th class="head">Leeerroyyy Jeennkinns!!</th>
 <th class="head">Ms. Snuffleupagus</th>
+<th class="head">Panda</th>
+<th class="head">SaschaPicksDogs</th>
 <th class="head">Sweet Lou</th>
+<th class="head">The Aggie</th>
+<th class="head">The Dood</th>
+<th class="head">The Dood's Nemesis</th>
+<th class="head">TransferPortal</th>
 </tr>
 </thead>
 <tbody valign="top">
@@ -397,32 +423,71 @@ ul.auto-toc {
 <td>Western Michigan</td>
 <td>Nevada</td>
 <td>7.5</td>
-<td>Nevada<sup>*</sup></td>
+<td>Western Michigan</td>
+<td>Western Michigan</td>
 <td>Nevada</td>
 <td>Western Michigan</td>
 <td>Nevada<sup>*</sup></td>
 <td>Nevada</td>
+<td>Western Michigan</td>
+<td>Western Michigan</td>
+<td>Western Michigan</td>
+<td>Western Michigan</td>
+<td>Nevada<sup>*</sup></td>
 <td>Nevada</td>
+<td>Western Michigan</td>
+<td>Nevada</td>
+<td>Nevada</td>
+<td>Western Michigan</td>
+<td>Western Michigan</td>
+<td>Nevada</td>
+<td>Western Michigan</td>
 </tr>
 <tr><td>2</td>
 <td>BIRMINGHAM BOWL</td>
 <td>Auburn</td>
 <td>Houston</td>
 <td>2.5</td>
+<td>Houston</td>
+<td>Houston</td>
+<td>Auburn</td>
 <td>Auburn</td>
 <td>Auburn</td>
 <td>Auburn</td>
 <td>Houston</td>
+<td>Houston</td>
+<td>Houston</td>
+<td>Auburn</td>
+<td>Houston</td>
 <td>Auburn</td>
 <td>Auburn</td>
+<td>Houston</td>
+<td>Auburn</td>
+<td>Houston</td>
+<td>Auburn</td>
+<td>Houston</td>
+<td>Houston</td>
 </tr>
 <tr><td>3</td>
 <td>FIRST RESPONDER BOWL</td>
 <td>Louisville</td>
 <td>Air Force</td>
 <td>1.5</td>
+<td>Louisville</td>
 <td>Air Force</td>
 <td>Air Force</td>
+<td>Louisville</td>
+<td>Air Force</td>
+<td>Air Force</td>
+<td>Air Force</td>
+<td>Air Force</td>
+<td>Louisville</td>
+<td>Louisville</td>
+<td>Air Force</td>
+<td>Louisville</td>
+<td>Air Force</td>
+<td>Air Force</td>
+<td>Louisville</td>
 <td>Louisville</td>
 <td>Air Force</td>
 <td>Louisville</td>
@@ -433,19 +498,45 @@ ul.auto-toc {
 <td>Mississippi State</td>
 <td>Texas Tech</td>
 <td>9.5</td>
+<td>Mississippi State</td>
+<td>Mississippi State</td>
+<td>Texas Tech</td>
+<td>Mississippi State</td>
 <td>Mississippi State<sup>*</sup></td>
+<td>Mississippi State</td>
+<td>Mississippi State</td>
+<td>Mississippi State</td>
 <td>Mississippi State</td>
 <td>Mississippi State<sup>*</sup></td>
 <td>Texas Tech</td>
 <td>Mississippi State<sup>*</sup></td>
+<td>Mississippi State</td>
+<td>Texas Tech</td>
 <td>Mississippi State<sup>*</sup></td>
+<td>Mississippi State</td>
+<td>Mississippi State</td>
+<td>Texas Tech</td>
+<td>Mississippi State</td>
 </tr>
 <tr><td>5</td>
 <td>GUARANTEED RATE BOWL</td>
 <td>Minnesota</td>
 <td>West Virginia</td>
 <td>1.5</td>
+<td>West Virginia</td>
+<td>West Virginia</td>
+<td>West Virginia</td>
+<td>West Virginia</td>
 <td>Minnesota</td>
+<td>Minnesota</td>
+<td>Minnesota</td>
+<td>West Virginia</td>
+<td>West Virginia</td>
+<td>Minnesota</td>
+<td>West Virginia</td>
+<td>Minnesota</td>
+<td>West Virginia</td>
+<td>West Virginia</td>
 <td>Minnesota</td>
 <td>Minnesota</td>
 <td>West Virginia</td>
@@ -457,11 +548,24 @@ ul.auto-toc {
 <td>Maryland</td>
 <td>Virginia Tech</td>
 <td>3.5</td>
+<td>Maryland</td>
+<td>Maryland</td>
+<td>Maryland</td>
+<td>Virginia Tech</td>
+<td>Virginia Tech</td>
+<td>Virginia Tech</td>
 <td>Virginia Tech</td>
 <td>Virginia Tech</td>
 <td>Maryland</td>
+<td>Maryland</td>
 <td>Virginia Tech</td>
 <td>Maryland</td>
+<td>Maryland</td>
+<td>Virginia Tech</td>
+<td>Maryland</td>
+<td>Maryland</td>
+<td>Maryland</td>
+<td>Virginia Tech</td>
 <td>Maryland</td>
 </tr>
 <tr><td>7</td>
@@ -470,6 +574,19 @@ ul.auto-toc {
 <td>Iowa State</td>
 <td>1.0</td>
 <td>Clemson</td>
+<td>Clemson</td>
+<td>Iowa State</td>
+<td>Iowa State</td>
+<td>Clemson</td>
+<td>Clemson</td>
+<td>Clemson</td>
+<td>Clemson</td>
+<td>Iowa State</td>
+<td>Clemson</td>
+<td>Iowa State</td>
+<td>Clemson</td>
+<td>Iowa State</td>
+<td>Iowa State</td>
 <td>Clemson</td>
 <td>Clemson</td>
 <td>Iowa State</td>
@@ -483,34 +600,73 @@ ul.auto-toc {
 <td>4.5</td>
 <td>Oregon</td>
 <td>Oklahoma</td>
+<td>Oregon</td>
+<td>Oklahoma</td>
+<td>Oregon</td>
+<td>Oklahoma</td>
+<td>Oregon</td>
+<td>Oklahoma</td>
+<td>Oklahoma</td>
 <td>Oklahoma</td>
 <td>Oregon</td>
 <td>Oregon</td>
 <td>Oklahoma</td>
+<td>Oregon</td>
+<td>Oklahoma</td>
+<td>Oregon</td>
+<td>Oklahoma</td>
+<td>Oregon</td>
+<td>Oregon</td>
 </tr>
 <tr><td>9</td>
 <td>DUKE'S MAYO BOWL</td>
 <td>North Carolina</td>
 <td>South Carolina</td>
 <td>9.0</td>
-<td>South Carolina</td>
-<td>South Carolina</td>
+<td>North Carolina</td>
 <td>North Carolina</td>
 <td>South Carolina</td>
 <td>North Carolina</td>
+<td>South Carolina</td>
+<td>South Carolina</td>
+<td>North Carolina</td>
+<td>North Carolina</td>
+<td>North Carolina</td>
+<td>North Carolina</td>
+<td>South Carolina</td>
+<td>North Carolina</td>
+<td>North Carolina</td>
+<td>South Carolina</td>
+<td>North Carolina</td>
+<td>North Carolina</td>
+<td>North Carolina</td>
+<td>South Carolina</td>
 <td>North Carolina</td>
 </tr>
 <tr><td>10</td>
 <td>MUSIC CITY BOWL</td>
-<td>Tennesse</td>
+<td>Tennessee</td>
 <td>Purdue</td>
 <td>5.0</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
 <td>Purdue</td>
 <td>Purdue<sup>*</sup></td>
-<td>Tennesse</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
+<td>Purdue</td>
+<td>Purdue</td>
+<td>Tennessee</td>
 <td>Purdue</td>
 <td>Purdue</td>
 <td>Purdue</td>
+<td>Tennessee</td>
+<td>Purdue</td>
+<td>Tennessee</td>
 </tr>
 <tr><td>11</td>
 <td>PEACH BOWL</td>
@@ -520,8 +676,21 @@ ul.auto-toc {
 <td>Michigan State</td>
 <td>Michigan State</td>
 <td>Michigan State</td>
+<td>Michigan State</td>
+<td>Michigan State</td>
+<td>Michigan State</td>
 <td>Pittsburgh</td>
 <td>Michigan State</td>
+<td>Michigan State</td>
+<td>Michigan State</td>
+<td>Pittsburgh</td>
+<td>Michigan State</td>
+<td>Michigan State</td>
+<td>Pittsburgh</td>
+<td>Michigan State</td>
+<td>Michigan State</td>
+<td>Michigan State</td>
+<td>Pittsburgh</td>
 <td>Michigan State</td>
 </tr>
 <tr><td>12</td>
@@ -529,10 +698,23 @@ ul.auto-toc {
 <td>Wisconsin</td>
 <td>Arizona State</td>
 <td>6.5</td>
+<td>Wisconsin</td>
+<td>Wisconsin</td>
+<td>Wisconsin</td>
+<td>Wisconsin</td>
 <td>Arizona State</td>
 <td>Wisconsin <sup>*</sup></td>
 <td>Wisconsin</td>
+<td>Wisconsin</td>
+<td>Wisconsin</td>
+<td>Wisconsin</td>
 <td>Arizona State</td>
+<td>Arizona State</td>
+<td>Wisconsin</td>
+<td>Arizona State</td>
+<td>Wisconsin</td>
+<td>Wisconsin</td>
+<td>Wisconsin</td>
 <td>Arizona State</td>
 <td>Wisconsin</td>
 </tr>
@@ -542,42 +724,94 @@ ul.auto-toc {
 <td>Rutgers</td>
 <td>11.5</td>
 <td>Wake Forest</td>
+<td>Wake Forest</td>
+<td>Wake Forest</td>
+<td>Wake Forest</td>
+<td>Wake Forest</td>
 <td>Wake Forest<sup>*</sup></td>
+<td>Wake Forest</td>
+<td>Wake Forest</td>
+<td>Wake Forest</td>
 <td>Wake Forest<sup>*</sup></td>
 <td>Rutgers</td>
 <td>Wake Forest<sup>*</sup></td>
+<td>Wake Forest</td>
+<td>Rutgers</td>
 <td>Wake Forest<sup>*</sup></td>
+<td>Wake Forest</td>
+<td>Wake Forest</td>
+<td>Rutgers</td>
+<td>Wake Forest</td>
 </tr>
 <tr><td>14</td>
 <td>COTTON BOWL</td>
 <td>Alabama</td>
 <td>Cincinnati</td>
 <td>13.5</td>
+<td>Alabama</td>
+<td>Alabama</td>
+<td>Alabama</td>
+<td>Alabama</td>
 <td>Cincinnati</td>
+<td>Alabama</td>
+<td>Alabama</td>
+<td>Alabama</td>
 <td>Alabama</td>
 <td>Alabama<sup>*</sup></td>
 <td>Cincinnati<sup>*</sup></td>
 <td>Alabama<sup>*</sup></td>
+<td>Alabama</td>
+<td>Cincinnati</td>
 <td>Alabama<sup>*</sup></td>
+<td>Alabama</td>
+<td>Alabama</td>
+<td>Cincinnati</td>
+<td>Alabama</td>
 </tr>
 <tr><td>15</td>
 <td>ORANGE BOWL</td>
 <td>Georgia</td>
 <td>Michigan</td>
 <td>7.5</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Michigan</td>
 <td>Michigan</td>
 <td>Michigan</td>
 <td>Georgia</td>
+<td>Georgia</td>
+<td>Georgia</td>
 <td>Michigan<sup>*</sup></td>
 <td>Michigan</td>
+<td>Georgia</td>
 <td>Michigan</td>
+<td>Michigan</td>
+<td>Michigan</td>
+<td>Georgia</td>
+<td>Michigan</td>
+<td>Georgia</td>
 </tr>
 <tr><td>16</td>
 <td>OUTBACK BOWL</td>
 <td>Penn State</td>
 <td>Arkansas</td>
 <td>1.0</td>
+<td>Arkansas</td>
+<td>Arkansas</td>
 <td>Penn State</td>
+<td>Arkansas</td>
+<td>Penn State</td>
+<td>Arkansas</td>
+<td>Arkansas</td>
+<td>Arkansas</td>
+<td>Arkansas</td>
+<td>Penn State</td>
+<td>Arkansas</td>
+<td>Penn State</td>
+<td>Arkansas</td>
+<td>Arkansas</td>
 <td>Arkansas</td>
 <td>Penn State</td>
 <td>Arkansas</td>
@@ -591,9 +825,22 @@ ul.auto-toc {
 <td>3.0</td>
 <td>Kentucky</td>
 <td>Iowa</td>
+<td>Iowa</td>
+<td>Iowa</td>
+<td>Kentucky</td>
+<td>Iowa</td>
+<td>Iowa</td>
+<td>Iowa</td>
+<td>Kentucky</td>
 <td>Kentucky</td>
 <td>Iowa</td>
 <td>Kentucky</td>
+<td>Iowa</td>
+<td>Iowa</td>
+<td>Iowa</td>
+<td>Iowa</td>
+<td>Kentucky</td>
+<td>Iowa</td>
 <td>Iowa</td>
 </tr>
 <tr><td>18</td>
@@ -601,12 +848,25 @@ ul.auto-toc {
 <td>Notre Dame</td>
 <td>Oklahoma State</td>
 <td>1.5</td>
-<td>Notre Dame</td>
-<td>Notre Dame</td>
+<td>Oklahoma State</td>
+<td>Oklahoma State</td>
 <td>Notre Dame</td>
 <td>Oklahoma State</td>
 <td>Notre Dame</td>
 <td>Notre Dame</td>
+<td>Oklahoma State</td>
+<td>Notre Dame</td>
+<td>Oklahoma State</td>
+<td>Notre Dame</td>
+<td>Oklahoma State</td>
+<td>Notre Dame</td>
+<td>Oklahoma State</td>
+<td>Oklahoma State</td>
+<td>Notre Dame</td>
+<td>Notre Dame</td>
+<td>Oklahoma State</td>
+<td>Notre Dame</td>
+<td>Oklahoma State</td>
 </tr>
 <tr><td>19</td>
 <td>ROSE BOWL</td>
@@ -614,10 +874,23 @@ ul.auto-toc {
 <td>Utah</td>
 <td>6.5</td>
 <td>Ohio State</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
 <td>Utah</td>
+<td>Utah</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
 <td>Ohio State</td>
 <td>Utah</td>
 <td>Ohio State</td>
+<td>Ohio State</td>
+<td>Utah</td>
+<td>Utah</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Utah</td>
 <td>Utah</td>
 </tr>
 <tr><td>20</td>
@@ -627,33 +900,72 @@ ul.auto-toc {
 <td>1.0</td>
 <td>Baylor</td>
 <td>Baylor</td>
+<td>Baylor</td>
+<td>Baylor</td>
+<td>Baylor</td>
+<td>Baylor</td>
+<td>Baylor</td>
+<td>Baylor</td>
+<td>Baylor</td>
 <td>Ole Miss</td>
 <td>Baylor</td>
 <td>Baylor</td>
 <td>Baylor</td>
+<td>Baylor</td>
+<td>Baylor</td>
+<td>Ole Miss</td>
+<td>Baylor</td>
+<td>Ole Miss</td>
+<td>Ole Miss</td>
 </tr>
 <tr><td>21</td>
 <td>TEXAS BOWL</td>
 <td>Kansas State</td>
 <td>LSU</td>
 <td>3.5</td>
+<td>Kansas State</td>
+<td>Kansas State</td>
+<td>Kansas State</td>
+<td>Kansas State</td>
 <td>LSU</td>
 <td>LSU</td>
+<td>LSU</td>
+<td>Kansas State</td>
+<td>Kansas State</td>
 <td>Kansas State</td>
 <td>LSU</td>
 <td>Kansas State</td>
 <td>Kansas State</td>
+<td>LSU</td>
+<td>Kansas State</td>
+<td>LSU</td>
+<td>Kansas State</td>
+<td>LSU</td>
+<td>LSU</td>
 </tr>
 <tr><td>B1</td>
 <td>Who will win the National Championship?</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>Georgia</td>
+<td>Alabama</td>
+<td>Alabama</td>
+<td>Alabama</td>
 <td>Michigan</td>
 <td>Alabama</td>
+<td>Michigan</td>
+<td>Alabama</td>
+<td>Michigan</td>
 <td>Alabama</td>
 <td>Cincinatti</td>
 <td>Alabama</td>
+<td>Georgia</td>
+<td>Michigan</td>
+<td>Alabama</td>
+<td>Alabama</td>
+<td>Alabama</td>
+<td>Michigan</td>
 <td>Alabama</td>
 </tr>
 <tr><td>B2</td>
@@ -661,11 +973,24 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>2</td>
+<td>4</td>
+<td>3</td>
+<td>2</td>
 <td>4</td>
 <td>4</td>
+<td>0</td>
+<td>2</td>
+<td>2</td>
 <td>2</td>
 <td>6</td>
 <td>4</td>
+<td>1</td>
+<td>4</td>
+<td>5</td>
+<td>2</td>
+<td>3</td>
+<td>2</td>
 <td>5</td>
 </tr>
 <tr><td>B3</td>
@@ -673,48 +998,100 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
 <td>Yes</td>
 <td>No</td>
 <td>Yes</td>
 <td>Yes</td>
 <td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>Yes</td>
+<td>No</td>
+<td>No</td>
 </tr>
 <tr><td>B4</td>
 <td>How many of these games will the Big 12 win?</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>4</td>
+<td>5</td>
+<td>4</td>
+<td>4</td>
 <td>2</td>
 <td>3</td>
+<td>2</td>
+<td>2</td>
+<td>4</td>
 <td>0</td>
 <td>3</td>
 <td>3</td>
+<td>6</td>
 <td>3</td>
+<td>3</td>
+<td>0</td>
+<td>4</td>
+<td>1</td>
+<td>2</td>
 </tr>
 <tr><td>B5</td>
 <td>How many of these games will the SEC win?</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>4</td>
+<td>4</td>
+<td>3</td>
+<td>4</td>
 <td>5</td>
+<td>5</td>
+<td>5</td>
+<td>5</td>
+<td>10</td>
+<td>5</td>
+<td>4</td>
+<td>4</td>
+<td>4</td>
 <td>5</td>
 <td>5</td>
 <td>4</td>
 <td>4</td>
-<td>5</td>
+<td>3</td>
+<td>4</td>
 </tr>
 <tr><td>T1</td>
 <td>Total points for BOTH semifinal games</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>120</td>
+<td>120</td>
+<td>150</td>
+<td>135</td>
 <td>95</td>
 <td>90</td>
+<td>87</td>
+<td>68</td>
+<td>60</td>
 <td>120</td>
 <td>80</td>
 <td>100</td>
+<td>117</td>
+<td>145</td>
 <td>100</td>
+<td>110</td>
+<td>120</td>
+<td>120</td>
+<td>140</td>
 </tr>
 </tbody>
 </table>
