--- a/bowl_pool/test/2021-2022/results.html
+++ b/bowl_pool/test/2021-2022/results.html
@@ -365,17 +365,30 @@ ul.auto-toc {
 
 <table border="1" class="docutils">
 <colgroup>
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
-<col width="9%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
+<col width="4%" />
 </colgroup>
 <thead valign="bottom">
 <tr><th class="head">ID</th>
@@ -383,12 +396,25 @@ ul.auto-toc {
 <th class="head">Favorite</th>
 <th class="head">Underdog</th>
 <th class="head">Spread</th>
+<th class="head">#RealMamaBear</th>
+<th class="head">Bear-in-Law</th>
+<th class="head">Blue Orred</th>
+<th class="head">Bopper</th>
 <th class="head">Bumblerooski</th>
 <th class="head">Can't Stop a Badger!</th>
+<th class="head">D-Bo</th>
+<th class="head">Gigi</th>
+<th class="head">GlamKam</th>
 <th class="head">Knights of Ren</th>
 <th class="head">Leeerroyyy Jeennkinns!!</th>
 <th class="head">Ms. Snuffleupagus</th>
+<th class="head">Panda</th>
+<th class="head">SaschaPicksDogs</th>
 <th class="head">Sweet Lou</th>
+<th class="head">The Aggie</th>
+<th class="head">The Dood</th>
+<th class="head">The Dood's Nemesis</th>
+<th class="head">TransferPortal</th>
 </tr>
 </thead>
 <tbody valign="top">
@@ -397,32 +423,71 @@ ul.auto-toc {
 <td>Western Michigan</td>
 <td>Nevada</td>
 <td>7.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
 </tr>
 <tr><td>2</td>
 <td>BIRMINGHAM BOWL</td>
 <td>Auburn</td>
 <td>Houston</td>
 <td>2.5</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
 </tr>
 <tr><td>3</td>
 <td>FIRST RESPONDER BOWL</td>
 <td>Louisville</td>
 <td>Air Force</td>
 <td>1.5</td>
+<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -435,9 +500,22 @@ ul.auto-toc {
 <td>9.5</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>2.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
 <td>0.0</td>
 </tr>
 <tr><td>5</td>
@@ -445,7 +523,20 @@ ul.auto-toc {
 <td>Minnesota</td>
 <td>West Virginia</td>
 <td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -457,11 +548,24 @@ ul.auto-toc {
 <td>Maryland</td>
 <td>Virginia Tech</td>
 <td>3.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
 <td>1.0</td>
 </tr>
 <tr><td>7</td>
@@ -470,6 +574,19 @@ ul.auto-toc {
 <td>Iowa State</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -483,21 +600,47 @@ ul.auto-toc {
 <td>4.5</td>
 <td>0.0</td>
 <td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
 </tr>
 <tr><td>9</td>
 <td>DUKE'S MAYO BOWL</td>
 <td>North Carolina</td>
 <td>South Carolina</td>
 <td>9.0</td>
-<td>2.0</td>
-<td>2.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
 <td>0.0</td>
 </tr>
 <tr><td>10</td>
@@ -505,12 +648,25 @@ ul.auto-toc {
 <td>Tennesse</td>
 <td>Purdue</td>
 <td>5.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>1.5</td>
 <td>2.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
 <td>0.0</td>
 <td>1.5</td>
 <td>1.5</td>
 <td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
 </tr>
 <tr><td>11</td>
 <td>PEACH BOWL</td>
@@ -520,8 +676,21 @@ ul.auto-toc {
 <td>2.0</td>
 <td>2.0</td>
 <td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
 <td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
 <td>2.0</td>
 </tr>
 <tr><td>12</td>
@@ -529,10 +698,23 @@ ul.auto-toc {
 <td>Wisconsin</td>
 <td>Arizona State</td>
 <td>6.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>2.0</td>
 <td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 </tr>
@@ -542,42 +724,94 @@ ul.auto-toc {
 <td>Rutgers</td>
 <td>11.5</td>
 <td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>2.0</td>
 <td>0.0</td>
 <td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
 <td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
 </tr>
 <tr><td>14</td>
 <td>COTTON BOWL</td>
 <td>Alabama</td>
 <td>Cincinnati</td>
 <td>13.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>2.0</td>
 <td>3.0</td>
 <td>0.0</td>
 <td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
 <td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
 </tr>
 <tr><td>15</td>
 <td>ORANGE BOWL</td>
 <td>Georgia</td>
 <td>Michigan</td>
 <td>7.5</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>2.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
 </tr>
 <tr><td>16</td>
 <td>OUTBACK BOWL</td>
 <td>Penn State</td>
 <td>Arkansas</td>
 <td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
@@ -591,9 +825,22 @@ ul.auto-toc {
 <td>3.0</td>
 <td>1.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
 <td>0.0</td>
 </tr>
 <tr><td>18</td>
@@ -601,12 +848,25 @@ ul.auto-toc {
 <td>Notre Dame</td>
 <td>Oklahoma State</td>
 <td>1.5</td>
-<td>0.0</td>
-<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
 <td>2.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
 </tr>
 <tr><td>19</td>
 <td>ROSE BOWL</td>
@@ -614,10 +874,23 @@ ul.auto-toc {
 <td>Utah</td>
 <td>6.5</td>
 <td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>2.0</td>
 <td>0.0</td>
 <td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
 <td>0.0</td>
 </tr>
 <tr><td>20</td>
@@ -627,16 +900,42 @@ ul.auto-toc {
 <td>1.0</td>
 <td>2.0</td>
 <td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
 <td>0.0</td>
 <td>2.0</td>
 <td>2.0</td>
 <td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
 </tr>
 <tr><td>B1</td>
 <td>Who will win the National Championship?</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -655,24 +954,63 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 </tr>
 <tr><td>B3</td>
 <td>Will Baylor hold Ole Miss to under their season average of 36 points?</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
 </tr>
 <tr><td>B4</td>
 <td>How many of these games will the Big 12 win?</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -691,6 +1029,19 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 </tr>
 <tr><td>T1</td>
 <td>Total points for BOTH semifinal games</td>
@@ -703,18 +1054,44 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
 </tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td><strong>21.25</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>18.0</strong></td>
 <td><strong>14.5</strong></td>
 <td><strong>20.5</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>21.25</strong></td>
 <td><strong>18.0</strong></td>
 <td><strong>13.75</strong></td>
 <td><strong>17.5</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>13.75</strong></td>
 <td><strong>17.5</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>8.75</strong></td>
+<td><strong>16.25</strong></td>
 </tr>
 </tbody>
 </table>
