--- a/bowl_pool/test/2021-2022/picks.html
+++ b/bowl_pool/test/2021-2022/picks.html
@@ -645,28 +645,28 @@ ul.auto-toc {
 </tr>
 <tr><td>10</td>
 <td>MUSIC CITY BOWL</td>
-<td>Tennesse</td>
+<td>Tennessee</td>
 <td>Purdue</td>
 <td>5.0</td>
-<td>Tennesse</td>
-<td>Tennesse</td>
-<td>Tennesse</td>
-<td>Tennesse</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
 <td>Purdue</td>
 <td>Purdue<sup>*</sup></td>
-<td>Tennesse</td>
-<td>Tennesse</td>
-<td>Tennesse</td>
-<td>Tennesse</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
+<td>Tennessee</td>
 <td>Purdue</td>
 <td>Purdue</td>
-<td>Tennesse</td>
+<td>Tennessee</td>
 <td>Purdue</td>
 <td>Purdue</td>
 <td>Purdue</td>
-<td>Tennesse</td>
+<td>Tennessee</td>
 <td>Purdue</td>
-<td>Tennesse</td>
+<td>Tennessee</td>
 </tr>
 <tr><td>11</td>
 <td>PEACH BOWL</td>
