--- a/bowl_pool/test/2021-2022/results.html
+++ b/bowl_pool/test/2021-2022/results.html
@@ -645,7 +645,7 @@ ul.auto-toc {
 </tr>
 <tr><td>10</td>
 <td>MUSIC CITY BOWL</td>
-<td>Tennesse</td>
+<td>Tennessee</td>
 <td>Purdue</td>
 <td>5.0</td>
 <td>0.0</td>
@@ -653,7 +653,7 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>1.5</td>
-<td>2.5</td>
+<td>2.5<sup>*</sup></td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -703,7 +703,7 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
-<td>2.0</td>
+<td>2.0<sup>*</sup></td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -728,16 +728,16 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>2.0</td>
+<td>2.0<sup>*</sup></td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
-<td>2.0</td>
+<td>2.0<sup>*</sup></td>
 <td>0.0</td>
-<td>2.0</td>
+<td>2.0<sup>*</sup></td>
 <td>1.0</td>
 <td>0.0</td>
-<td>2.0</td>
+<td>2.0<sup>*</sup></td>
 <td>1.0</td>
 <td>1.0</td>
 <td>0.0</td>
@@ -757,12 +757,12 @@ ul.auto-toc {
 <td>2.0</td>
 <td>2.0</td>
 <td>2.0</td>
-<td>3.0</td>
+<td>3.0<sup>*</sup></td>
 <td>0.0</td>
-<td>3.0</td>
+<td>3.0<sup>*</sup></td>
 <td>2.0</td>
 <td>0.0</td>
-<td>3.0</td>
+<td>3.0<sup>*</sup></td>
 <td>2.0</td>
 <td>2.0</td>
 <td>0.0</td>
@@ -1095,6 +1095,7 @@ ul.auto-toc {
 </tr>
 </tbody>
 </table>
+<p>* <em>Includes sure thing bowl bonus point</em></p>
 </div>
 </body>
 </html>
