--- a/bowl_pool/2021-2022/rankings.html
+++ b/bowl_pool/2021-2022/rankings.html
@@ -364,29 +364,29 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-01-03 23:35:19</em></div>
+<div class="line"><em>Last updated:  2022-01-03 23:55:41</em></div>
 <div class="line"><em>Last bowl scored:  SUGAR BOWL (Ole Miss vs. Baylor)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Bear-in-Law 22.25</div>
-<div class="line">2. #RealMamaBear 21.25</div>
-<div class="line">2. GlamKam 21.25</div>
-<div class="line">4. The Dood 21.0</div>
-<div class="line">5. Can't Stop a Badger! 20.5</div>
-<div class="line">6. Panda 20.0</div>
-<div class="line">7. Gigi 19.25</div>
-<div class="line">8. Blue Orred 19.0</div>
-<div class="line">9. Bopper 18.0</div>
-<div class="line">9. Knights of Ren 18.0</div>
-<div class="line">11. Ms. Snuffleupagus 17.5</div>
-<div class="line">11. Sweet Lou 17.5</div>
-<div class="line">13. TransferPortal 16.25</div>
-<div class="line">14. The Aggie 15.75</div>
-<div class="line">15. D-Bo 15.25</div>
-<div class="line">16. Bumblerooski 14.5</div>
-<div class="line">17. Leeerroyyy Jeennkinns!! 13.75</div>
-<div class="line">17. SaschaPicksDogs 13.75</div>
-<div class="line">19. The Dood's Nemesis 8.75</div>
+<div class="line">1. <strong>Bear-in-Law 22.25</strong></div>
+<div class="line">2. <strong>#RealMamaBear 21.25</strong></div>
+<div class="line">2. <strong>GlamKam 21.25</strong></div>
+<div class="line">4. <strong>The Dood 21.0</strong></div>
+<div class="line">5. <strong>Can't Stop a Badger! 20.5</strong></div>
+<div class="line">6. <strong>Panda 20.0</strong></div>
+<div class="line">7. <strong>Gigi 19.25</strong></div>
+<div class="line">8. <strong>Blue Orred 19.0</strong></div>
+<div class="line">9. <strong>Bopper 18.0</strong></div>
+<div class="line">9. <strong>Knights of Ren 18.0</strong></div>
+<div class="line">11. <strong>Ms. Snuffleupagus 17.5</strong></div>
+<div class="line">11. <strong>Sweet Lou 17.5</strong></div>
+<div class="line">13. <strong>TransferPortal 16.25</strong></div>
+<div class="line">14. <strong>The Aggie 15.75</strong></div>
+<div class="line">15. <strong>D-Bo 15.25</strong></div>
+<div class="line">16. <strong>Bumblerooski 14.5</strong></div>
+<div class="line">17. <strong>Leeerroyyy Jeennkinns!! 13.75</strong></div>
+<div class="line">17. <strong>SaschaPicksDogs 13.75</strong></div>
+<div class="line">19. <strong>The Dood's Nemesis 8.75</strong></div>
 </div>
 </div>
 </body>
