2021-2022 Bowl Pool - Sure thing picks addded

--- a/bowl_pool/2021-2022/picks.html
+++ b/bowl_pool/2021-2022/picks.html
@@ -498,24 +498,24 @@ ul.auto-toc {
 <td>Mississippi State</td>
 <td>Texas Tech</td>
 <td>9.5</td>
-<td>Mississippi State</td>
-<td>Mississippi State</td>
-<td>Texas Tech</td>
-<td>Mississippi State</td>
-<td>Mississippi State<sup>*</sup></td>
-<td>Mississippi State</td>
-<td>Mississippi State</td>
-<td>Mississippi State</td>
-<td>Mississippi State</td>
-<td>Mississippi State<sup>*</sup></td>
-<td>Texas Tech</td>
 <td>Mississippi State<sup>*</sup></td>
 <td>Mississippi State</td>
 <td>Texas Tech</td>
 <td>Mississippi State<sup>*</sup></td>
+<td>Mississippi State<sup>*</sup></td>
 <td>Mississippi State</td>
 <td>Mississippi State</td>
+<td>Mississippi State<sup>*</sup></td>
+<td>Mississippi State</td>
+<td>Mississippi State<sup>*</sup></td>
 <td>Texas Tech</td>
+<td>Mississippi State<sup>*</sup></td>
+<td>Mississippi State<sup>*</sup></td>
+<td>Texas Tech<sup>*</sup></td>
+<td>Mississippi State<sup>*</sup></td>
+<td>Mississippi State<sup>*</sup></td>
+<td>Mississippi State<sup>*</sup></td>
+<td>Texas Tech<sup>*</sup></td>
 <td>Mississippi State</td>
 </tr>
 <tr><td>5</td>
@@ -624,7 +624,7 @@ ul.auto-toc {
 <td>South Carolina</td>
 <td>9.0</td>
 <td>North Carolina</td>
-<td>North Carolina</td>
+<td>North Carolina<sup>*</sup></td>
 <td>South Carolina</td>
 <td>North Carolina</td>
 <td>South Carolina</td>
@@ -698,7 +698,7 @@ ul.auto-toc {
 <td>Wisconsin</td>
 <td>Arizona State</td>
 <td>6.5</td>
-<td>Wisconsin</td>
+<td>Wisconsin <sup>*</sup></td>
 <td>Wisconsin</td>
 <td>Wisconsin</td>
 <td>Wisconsin</td>
@@ -706,12 +706,12 @@ ul.auto-toc {
 <td>Wisconsin <sup>*</sup></td>
 <td>Wisconsin</td>
 <td>Wisconsin</td>
-<td>Wisconsin</td>
-<td>Wisconsin</td>
-<td>Arizona State</td>
-<td>Arizona State</td>
+<td>Wisconsin <sup>*</sup></td>
 <td>Wisconsin</td>
 <td>Arizona State</td>
+<td>Arizona State</td>
+<td>Wisconsin</td>
+<td>Arizona State<sup>*</sup></td>
 <td>Wisconsin</td>
 <td>Wisconsin</td>
 <td>Wisconsin</td>
@@ -723,25 +723,25 @@ ul.auto-toc {
 <td>Wake Forest</td>
 <td>Rutgers</td>
 <td>11.5</td>
-<td>Wake Forest</td>
-<td>Wake Forest</td>
+<td>Wake Forest<sup>*</sup></td>
+<td>Wake Forest<sup>*</sup></td>
 <td>Wake Forest</td>
 <td>Wake Forest</td>
 <td>Wake Forest</td>
 <td>Wake Forest<sup>*</sup></td>
-<td>Wake Forest</td>
+<td>Wake Forest<sup>*</sup></td>
 <td>Wake Forest</td>
 <td>Wake Forest</td>
 <td>Wake Forest<sup>*</sup></td>
 <td>Rutgers</td>
 <td>Wake Forest<sup>*</sup></td>
-<td>Wake Forest</td>
-<td>Rutgers</td>
+<td>Wake Forest<sup>*</sup></td>
+<td>Rutgers<sup>*</sup></td>
 <td>Wake Forest<sup>*</sup></td>
 <td>Wake Forest</td>
-<td>Wake Forest</td>
+<td>Wake Forest<sup>*</sup></td>
 <td>Rutgers</td>
-<td>Wake Forest</td>
+<td>Wake Forest<sup>*</sup></td>
 </tr>
 <tr><td>14</td>
 <td>COTTON BOWL</td>
@@ -750,23 +750,23 @@ ul.auto-toc {
 <td>13.5</td>
 <td>Alabama</td>
 <td>Alabama</td>
-<td>Alabama</td>
-<td>Alabama</td>
+<td>Alabama<sup>*</sup></td>
+<td>Alabama<sup>*</sup></td>
 <td>Cincinnati</td>
 <td>Alabama</td>
-<td>Alabama</td>
-<td>Alabama</td>
-<td>Alabama</td>
+<td>Alabama<sup>*</sup></td>
+<td>Alabama<sup>*</sup></td>
+<td>Alabama<sup>*</sup></td>
 <td>Alabama<sup>*</sup></td>
 <td>Cincinnati<sup>*</sup></td>
 <td>Alabama<sup>*</sup></td>
-<td>Alabama</td>
+<td>Alabama<sup>*</sup></td>
 <td>Cincinnati</td>
 <td>Alabama<sup>*</sup></td>
-<td>Alabama</td>
-<td>Alabama</td>
+<td>Alabama<sup>*</sup></td>
+<td>Alabama<sup>*</sup></td>
 <td>Cincinnati</td>
-<td>Alabama</td>
+<td>Alabama<sup>*</sup></td>
 </tr>
 <tr><td>15</td>
 <td>ORANGE BOWL</td>
@@ -775,7 +775,7 @@ ul.auto-toc {
 <td>7.5</td>
 <td>Georgia</td>
 <td>Georgia</td>
-<td>Georgia</td>
+<td>Georgia<sup>*</sup></td>
 <td>Georgia</td>
 <td>Michigan</td>
 <td>Michigan</td>
@@ -815,7 +815,7 @@ ul.auto-toc {
 <td>Arkansas</td>
 <td>Penn State</td>
 <td>Arkansas</td>
-<td>Penn State</td>
+<td>Penn State<sup>*</sup></td>
 <td>Arkansas</td>
 </tr>
 <tr><td>17</td>
@@ -900,13 +900,13 @@ ul.auto-toc {
 <td>1.0</td>
 <td>Baylor</td>
 <td>Baylor</td>
+<td>Baylor<sup>*</sup></td>
+<td>Baylor<sup>*</sup></td>
 <td>Baylor</td>
 <td>Baylor</td>
-<td>Baylor</td>
-<td>Baylor</td>
-<td>Baylor</td>
-<td>Baylor</td>
-<td>Baylor</td>
+<td>Baylor<sup>*</sup></td>
+<td>Baylor<sup>*</sup></td>
+<td>Baylor<sup>*</sup></td>
 <td>Ole Miss</td>
 <td>Baylor</td>
 <td>Baylor</td>
@@ -915,7 +915,7 @@ ul.auto-toc {
 <td>Baylor</td>
 <td>Ole Miss</td>
 <td>Baylor</td>
-<td>Ole Miss</td>
+<td>Ole Miss<sup>*</sup></td>
 <td>Ole Miss</td>
 </tr>
 <tr><td>21</td>
