--- a/bowl_pool/2021-2022/results.html
+++ b/bowl_pool/2021-2022/results.html
@@ -511,11 +511,11 @@ ul.auto-toc {
 <td>2.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>2.0</td>
+<td>3.0<sup>*</sup></td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>2.0</td>
+<td>3.0<sup>*</sup></td>
 <td>0.0</td>
 </tr>
 <tr><td>5</td>
@@ -698,7 +698,7 @@ ul.auto-toc {
 <td>Wisconsin</td>
 <td>Arizona State</td>
 <td>6.5</td>
-<td>1.0</td>
+<td>2.0<sup>*</sup></td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
@@ -706,7 +706,7 @@ ul.auto-toc {
 <td>2.0<sup>*</sup></td>
 <td>1.0</td>
 <td>1.0</td>
-<td>1.0</td>
+<td>2.0<sup>*</sup></td>
 <td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -723,25 +723,25 @@ ul.auto-toc {
 <td>Wake Forest</td>
 <td>Rutgers</td>
 <td>11.5</td>
-<td>1.0</td>
-<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
 <td>1.0</td>
 <td>1.0</td>
 <td>1.0</td>
 <td>2.0<sup>*</sup></td>
-<td>1.0</td>
+<td>2.0<sup>*</sup></td>
 <td>1.0</td>
 <td>1.0</td>
 <td>2.0<sup>*</sup></td>
 <td>0.0</td>
 <td>2.0<sup>*</sup></td>
-<td>1.0</td>
+<td>2.0<sup>*</sup></td>
 <td>0.0</td>
 <td>2.0<sup>*</sup></td>
 <td>1.0</td>
-<td>1.0</td>
+<td>2.0<sup>*</sup></td>
 <td>0.0</td>
-<td>1.0</td>
+<td>2.0<sup>*</sup></td>
 </tr>
 <tr><td>14</td>
 <td>COTTON BOWL</td>
@@ -750,23 +750,23 @@ ul.auto-toc {
 <td>13.5</td>
 <td>2.0</td>
 <td>2.0</td>
-<td>2.0</td>
-<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
 <td>0.0</td>
 <td>2.0</td>
-<td>2.0</td>
-<td>2.0</td>
-<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
 <td>3.0<sup>*</sup></td>
 <td>0.0</td>
 <td>3.0<sup>*</sup></td>
-<td>2.0</td>
+<td>3.0<sup>*</sup></td>
 <td>0.0</td>
 <td>3.0<sup>*</sup></td>
-<td>2.0</td>
-<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
 <td>0.0</td>
-<td>2.0</td>
+<td>3.0<sup>*</sup></td>
 </tr>
 <tr><td>15</td>
 <td>ORANGE BOWL</td>
@@ -775,7 +775,7 @@ ul.auto-toc {
 <td>7.5</td>
 <td>2.0</td>
 <td>2.0</td>
-<td>2.0</td>
+<td>3.0<sup>*</sup></td>
 <td>2.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -900,13 +900,13 @@ ul.auto-toc {
 <td>1.0</td>
 <td>2.0</td>
 <td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
 <td>2.0</td>
 <td>2.0</td>
-<td>2.0</td>
-<td>2.0</td>
-<td>2.0</td>
-<td>2.0</td>
-<td>2.0</td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
+<td>3.0<sup>*</sup></td>
 <td>0.0</td>
 <td>2.0</td>
 <td>2.0</td>
@@ -1073,25 +1073,25 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>21.25</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>18.0</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>20.0</strong></td>
 <td><strong>14.5</strong></td>
 <td><strong>20.5</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>19.25</strong></td>
+<td><strong>18.25</strong></td>
 <td><strong>21.25</strong></td>
+<td><strong>24.25</strong></td>
 <td><strong>18.0</strong></td>
 <td><strong>13.75</strong></td>
 <td><strong>17.5</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>13.75</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>14.75</strong></td>
 <td><strong>17.5</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>16.25</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>9.75</strong></td>
+<td><strong>18.25</strong></td>
 </tr>
 </tbody>
 </table>
