2021-2022 Bowl Pool - Highlights added

--- a/bowl_pool/2021-2022/rankings.html
+++ b/bowl_pool/2021-2022/rankings.html
@@ -364,7 +364,7 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-01-05 10:36:50</em></div>
+<div class="line"><em>Last updated:  2022-01-05 10:43:37</em></div>
 <div class="line"><em>Last bowl scored:  SUGAR BOWL (Ole Miss vs. Baylor)</em></div>
 </div>
 <div class="line-block">
@@ -372,20 +372,20 @@ ul.auto-toc {
 <div class="line">2. <strong>#RealMamaBear 23.25</strong></div>
 <div class="line">2. <strong>Bear-in-Law 23.25</strong></div>
 <div class="line">4. <strong>The Dood 23.0</strong></div>
-<div class="line">5. <strong>Blue Orred 22.0</strong></div>
-<div class="line">5. <strong>Panda 22.0</strong></div>
-<div class="line">7. <strong>Gigi 21.25</strong></div>
+<div class="line">5. Blue Orred 22.0</div>
+<div class="line">5. Panda 22.0</div>
+<div class="line">7. Gigi 21.25</div>
 <div class="line">8. <strong>Can't Stop a Badger! 20.5</strong></div>
-<div class="line">9. <strong>Bopper 20.0</strong></div>
-<div class="line">10. <strong>D-Bo 18.25</strong></div>
-<div class="line">10. <strong>TransferPortal 18.25</strong></div>
-<div class="line">12. <strong>Knights of Ren 18.0</strong></div>
-<div class="line">13. <strong>Ms. Snuffleupagus 17.5</strong></div>
-<div class="line">13. <strong>Sweet Lou 17.5</strong></div>
-<div class="line">15. <strong>The Aggie 16.75</strong></div>
-<div class="line">16. <strong>SaschaPicksDogs 14.75</strong></div>
-<div class="line">17. <strong>Bumblerooski 14.5</strong></div>
-<div class="line">18. <strong>Leeerroyyy Jeennkinns!! 13.75</strong></div>
+<div class="line">9. Bopper 20.0</div>
+<div class="line">10. D-Bo 18.25</div>
+<div class="line">10. TransferPortal 18.25</div>
+<div class="line">12. Knights of Ren 18.0</div>
+<div class="line">13. Ms. Snuffleupagus 17.5</div>
+<div class="line">13. Sweet Lou 17.5</div>
+<div class="line">15. The Aggie 16.75</div>
+<div class="line">16. SaschaPicksDogs 14.75</div>
+<div class="line">17. Bumblerooski 14.5</div>
+<div class="line">18. Leeerroyyy Jeennkinns!! 13.75</div>
 <div class="line">19. <strong>The Dood's Nemesis 9.75</strong></div>
 </div>
 </div>
