2021-2022 Bowl Pool - KSU vs. LSU and B3,B4 added

--- a/bowl_pool/2021-2022/rankings.html
+++ b/bowl_pool/2021-2022/rankings.html
@@ -364,27 +364,27 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-01-05 10:43:37</em></div>
-<div class="line"><em>Last bowl scored:  SUGAR BOWL (Ole Miss vs. Baylor)</em></div>
+<div class="line"><em>Last updated:  2022-01-05 10:49:11</em></div>
+<div class="line"><em>Last bowl scored:  TEXAS BOWL (Kansas State vs. LSU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>GlamKam 24.25</strong></div>
-<div class="line">2. <strong>#RealMamaBear 23.25</strong></div>
-<div class="line">2. <strong>Bear-in-Law 23.25</strong></div>
-<div class="line">4. <strong>The Dood 23.0</strong></div>
-<div class="line">5. Blue Orred 22.0</div>
-<div class="line">5. Panda 22.0</div>
-<div class="line">7. Gigi 21.25</div>
-<div class="line">8. <strong>Can't Stop a Badger! 20.5</strong></div>
-<div class="line">9. Bopper 20.0</div>
-<div class="line">10. D-Bo 18.25</div>
-<div class="line">10. TransferPortal 18.25</div>
-<div class="line">12. Knights of Ren 18.0</div>
-<div class="line">13. Ms. Snuffleupagus 17.5</div>
-<div class="line">13. Sweet Lou 17.5</div>
+<div class="line">1. <strong>Bear-in-Law 25.25</strong></div>
+<div class="line">1. <strong>GlamKam 25.25</strong></div>
+<div class="line">3. <strong>#RealMamaBear 24.25</strong></div>
+<div class="line">4. <strong>The Dood 24.0</strong></div>
+<div class="line">5. Gigi 23.25</div>
+<div class="line">6. Blue Orred 23.0</div>
+<div class="line">6. Panda 23.0</div>
+<div class="line">8. <strong>Can't Stop a Badger! 21.5</strong></div>
+<div class="line">9. Bopper 21.0</div>
+<div class="line">10. Sweet Lou 20.5</div>
+<div class="line">11. Knights of Ren 20.0</div>
+<div class="line">12. D-Bo 19.25</div>
+<div class="line">12. TransferPortal 19.25</div>
+<div class="line">14. Ms. Snuffleupagus 18.5</div>
 <div class="line">15. The Aggie 16.75</div>
-<div class="line">16. SaschaPicksDogs 14.75</div>
-<div class="line">17. Bumblerooski 14.5</div>
+<div class="line">16. SaschaPicksDogs 15.75</div>
+<div class="line">17. Bumblerooski 15.5</div>
 <div class="line">18. Leeerroyyy Jeennkinns!! 13.75</div>
 <div class="line">19. <strong>The Dood's Nemesis 9.75</strong></div>
 </div>
