--- a/bowl_pool/2021-2022/results.html
+++ b/bowl_pool/2021-2022/results.html
@@ -918,6 +918,31 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>21</td>
+<td>TEXAS BOWL</td>
+<td>Kansas State</td>
+<td>LSU</td>
+<td>3.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>Who will win the National Championship?</td>
 <td>&nbsp;</td>
@@ -962,11 +987,11 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
+<td>1.0</td>
 </tr>
 <tr><td>B3</td>
 <td>Will Baylor hold Ole Miss to under their season average of 36 points?</td>
@@ -999,7 +1024,7 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>0.0</td>
-<td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1027,17 +1052,17 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
-<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
 <td>0.0</td>
 <td>0.0</td>
 <td>0.0</td>
@@ -1073,25 +1098,25 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>23.25</strong></td>
-<td><strong>23.25</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>21.25</strong></td>
 <td><strong>24.25</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>16.75</strong></td>
+<td><strong>25.25</strong></td>
 <td><strong>23.0</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>25.25</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>24.0</strong></td>
 <td><strong>9.75</strong></td>
-<td><strong>18.25</strong></td>
+<td><strong>19.25</strong></td>
 </tr>
 </tbody>
 </table>
