--- a/bowl_pool/2021-2022/rankings.html
+++ b/bowl_pool/2021-2022/rankings.html
@@ -364,7 +364,7 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-01-11 16:04:59</em></div>
+<div class="line"><em>Last updated:  2022-01-11 16:10:23</em></div>
 <div class="line"><em>Last bowl scored:  TEXAS BOWL (Kansas State vs. LSU)</em></div>
 </div>
 <div class="line-block">
@@ -372,10 +372,10 @@ ul.auto-toc {
 <div class="line">1. <strong>Bear-in-Law 25.25</strong></div>
 <div class="line">1. <strong>GlamKam 25.25</strong></div>
 <div class="line">4. Panda 24.0</div>
-<div class="line">4. <strong>The Dood 24.0</strong></div>
+<div class="line">4. The Dood 24.0</div>
 <div class="line">6. Gigi 23.25</div>
 <div class="line">7. Blue Orred 23.0</div>
-<div class="line">8. <strong>Can't Stop a Badger! 21.5</strong></div>
+<div class="line">8. Can't Stop a Badger! 21.5</div>
 <div class="line">9. Bopper 21.0</div>
 <div class="line">10. Sweet Lou 20.5</div>
 <div class="line">11. Knights of Ren 20.0</div>
