--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,26 +364,26 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-12-28 19:25:35</em></div>
-<div class="line"><em>Last bowl scored:  Military Bowl (Duke vs. UCF)</em></div>
+<div class="line"><em>Last updated:  2022-12-29 09:18:17</em></div>
+<div class="line"><em>Last bowl scored:  Texas Bowl (Ole Miss vs. Texas Tech)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Bugaroo 12.25</strong></div>
-<div class="line">2. <strong>Badgers 11.0</strong></div>
-<div class="line">3. <strong>bopper 10.25</strong></div>
-<div class="line">4. GlamKam 10.0</div>
-<div class="line">5. MamaLonghorn 9.25</div>
-<div class="line">6. Bad News Bibby 8.5</div>
-<div class="line">7. Amanda 8.0</div>
-<div class="line">7. Sure Thing Shipley 8.0</div>
-<div class="line">9. Gigi 7.5</div>
-<div class="line">10. Aggie Austin 7.25</div>
-<div class="line">10. D-bo 7.25</div>
-<div class="line">12. blue orred 7.0</div>
-<div class="line">12. NIL 7.0</div>
-<div class="line">14. Bear-in-Law 6.5</div>
-<div class="line">15. #mamabear 5.25</div>
-<div class="line">16. <strong>W2D2 5.0</strong></div>
+<div class="line">1. <strong>Bugaroo 14.25</strong></div>
+<div class="line">2. <strong>Badgers 13.0</strong></div>
+<div class="line">2. GlamKam 13.0</div>
+<div class="line">4. MamaLonghorn 12.5</div>
+<div class="line">5. <strong>bopper 11.25</strong></div>
+<div class="line">6. Sure Thing Shipley 11.0</div>
+<div class="line">7. D-bo 10.25</div>
+<div class="line">8. Amanda 10.0</div>
+<div class="line">8. NIL 10.0</div>
+<div class="line">10. Bad News Bibby 9.75</div>
+<div class="line">11. Aggie Austin 9.25</div>
+<div class="line">12. Gigi 8.75</div>
+<div class="line">13. Bear-in-Law 8.5</div>
+<div class="line">14. blue orred 8.0</div>
+<div class="line">15. #mamabear 7.5</div>
+<div class="line">16. <strong>W2D2 7.0</strong></div>
 </div>
 </div>
 </body>
