--- a/bowl_pool/2022-2023/results.html
+++ b/bowl_pool/2022-2023/results.html
@@ -720,27 +720,93 @@ ul.auto-toc {
 <td>1.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>15</td>
+<td>Liberty Bowl</td>
+<td>Arkansas</td>
+<td>Kansas</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>16</td>
+<td>Holiday Bowl</td>
+<td>Oregon</td>
+<td>North Carolina</td>
+<td>14.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+</tr>
+<tr><td>17</td>
+<td>Texas Bowl</td>
+<td>Ole Miss</td>
+<td>Texas Tech</td>
+<td>3.5</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>5.25</strong></td>
-<td><strong>7.25</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>6.5</strong></td>
-<td><strong>7.0</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>7.25</strong></td>
 <td><strong>7.5</strong></td>
-<td><strong>10.0</strong></td>
 <td><strong>9.25</strong></td>
-<td><strong>7.0</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>9.75</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>8.5</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>5.0</strong></td>
+<td><strong>11.25</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>10.25</strong></td>
+<td><strong>8.75</strong></td>
+<td><strong>13.0</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>7.0</strong></td>
 </tr>
 </tbody>
 </table>
