--- a/bowl_pool/test/2022-2023/rankings.html
+++ b/bowl_pool/test/2022-2023/rankings.html
@@ -364,24 +364,24 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-12-28 19:19:36</em></div>
-<div class="line"><em>Last bowl scored:  Guaranteed Rate Bowl (Wisconsin vs. Oklahoma State)</em></div>
+<div class="line"><em>Last updated:  2022-12-28 19:28:05</em></div>
+<div class="line"><em>Last bowl scored:  Military Bowl (Duke vs. UCF)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Bugaroo 11.25</strong></div>
+<div class="line">1. <strong>Bugaroo 12.25</strong></div>
 <div class="line">2. <strong>Badgers 11.0</strong></div>
-<div class="line">3. <strong>bopper 9.25</strong></div>
-<div class="line">4. GlamKam 9.0</div>
-<div class="line">5. Bad News Bibby 8.5</div>
-<div class="line">6. MamaLonghorn 8.25</div>
+<div class="line">3. <strong>bopper 10.25</strong></div>
+<div class="line">4. GlamKam 10.0</div>
+<div class="line">5. MamaLonghorn 9.25</div>
+<div class="line">6. Bad News Bibby 8.5</div>
 <div class="line">7. Amanda 8.0</div>
-<div class="line">8. Aggie Austin 7.25</div>
-<div class="line">8. D-bo 7.25</div>
-<div class="line">10. blue orred 7.0</div>
-<div class="line">10. NIL 7.0</div>
-<div class="line">10. Sure Thing Shipley 7.0</div>
-<div class="line">13. Bear-in-Law 6.5</div>
-<div class="line">13. Gigi 6.5</div>
+<div class="line">7. Sure Thing Shipley 8.0</div>
+<div class="line">9. Gigi 7.5</div>
+<div class="line">10. Aggie Austin 7.25</div>
+<div class="line">10. D-bo 7.25</div>
+<div class="line">12. blue orred 7.0</div>
+<div class="line">12. NIL 7.0</div>
+<div class="line">14. Bear-in-Law 6.5</div>
 <div class="line">15. #mamabear 5.25</div>
 <div class="line">16. <strong>W2D2 5.0</strong></div>
 </div>
