--- a/bowl_pool/test/2022-2023/results.html
+++ b/bowl_pool/test/2022-2023/results.html
@@ -698,6 +698,28 @@ ul.auto-toc {
 <td>1.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>14</td>
+<td>Military Bowl</td>
+<td>Duke</td>
+<td>UCF</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
@@ -710,14 +732,14 @@ ul.auto-toc {
 <td><strong>11.0</strong></td>
 <td><strong>6.5</strong></td>
 <td><strong>7.0</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>11.25</strong></td>
+<td><strong>10.25</strong></td>
+<td><strong>12.25</strong></td>
 <td><strong>7.25</strong></td>
-<td><strong>6.5</strong></td>
-<td><strong>9.0</strong></td>
-<td><strong>8.25</strong></td>
+<td><strong>7.5</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>9.25</strong></td>
 <td><strong>7.0</strong></td>
-<td><strong>7.0</strong></td>
+<td><strong>8.0</strong></td>
 <td><strong>5.0</strong></td>
 </tr>
 </tbody>
