Update through Dec. 28th games with highlights

--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,15 +364,15 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-12-29 09:18:17</em></div>
+<div class="line"><em>Last updated:  2022-12-29 09:23:13</em></div>
 <div class="line"><em>Last bowl scored:  Texas Bowl (Ole Miss vs. Texas Tech)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Bugaroo 14.25</strong></div>
 <div class="line">2. <strong>Badgers 13.0</strong></div>
-<div class="line">2. GlamKam 13.0</div>
+<div class="line">2. <strong>GlamKam 13.0</strong></div>
 <div class="line">4. MamaLonghorn 12.5</div>
-<div class="line">5. <strong>bopper 11.25</strong></div>
+<div class="line">5. bopper 11.25</div>
 <div class="line">6. Sure Thing Shipley 11.0</div>
 <div class="line">7. D-bo 10.25</div>
 <div class="line">8. Amanda 10.0</div>
