--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,26 +364,26 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-12-29 09:23:13</em></div>
-<div class="line"><em>Last bowl scored:  Texas Bowl (Ole Miss vs. Texas Tech)</em></div>
+<div class="line"><em>Last updated:  2022-12-29 23:56:30</em></div>
+<div class="line"><em>Last bowl scored:  Alamo Bowl (Texas vs. Washington)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Bugaroo 14.25</strong></div>
-<div class="line">2. <strong>Badgers 13.0</strong></div>
-<div class="line">2. <strong>GlamKam 13.0</strong></div>
-<div class="line">4. MamaLonghorn 12.5</div>
-<div class="line">5. bopper 11.25</div>
-<div class="line">6. Sure Thing Shipley 11.0</div>
-<div class="line">7. D-bo 10.25</div>
-<div class="line">8. Amanda 10.0</div>
-<div class="line">8. NIL 10.0</div>
-<div class="line">10. Bad News Bibby 9.75</div>
-<div class="line">11. Aggie Austin 9.25</div>
-<div class="line">12. Gigi 8.75</div>
-<div class="line">13. Bear-in-Law 8.5</div>
-<div class="line">14. blue orred 8.0</div>
-<div class="line">15. #mamabear 7.5</div>
-<div class="line">16. <strong>W2D2 7.0</strong></div>
+<div class="line">1. <strong>Bugaroo 17.25</strong></div>
+<div class="line">2. <strong>GlamKam 15.0</strong></div>
+<div class="line">3. MamaLonghorn 14.5</div>
+<div class="line">4. <strong>Badgers 14.0</strong></div>
+<div class="line">4. Sure Thing Shipley 14.0</div>
+<div class="line">6. bopper 13.25</div>
+<div class="line">7. Amanda 13.0</div>
+<div class="line">8. D-bo 12.25</div>
+<div class="line">9. NIL 12.0</div>
+<div class="line">10. Aggie Austin 11.25</div>
+<div class="line">10. Bad News Bibby 11.25</div>
+<div class="line">12. Gigi 10.75</div>
+<div class="line">13. Bear-in-Law 10.5</div>
+<div class="line">13. <strong>W2D2 10.5</strong></div>
+<div class="line">15. blue orred 10.0</div>
+<div class="line">16. #mamabear 9.5</div>
 </div>
 </div>
 </body>
