--- a/bowl_pool/2022-2023/results.html
+++ b/bowl_pool/2022-2023/results.html
@@ -786,27 +786,93 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>18</td>
+<td>Pinstripe Bowl</td>
+<td>Minnesota</td>
+<td>Syracuse</td>
+<td>7.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>19</td>
+<td>Cheez-It Bowl</td>
+<td>Florida State</td>
+<td>Oklahoma</td>
+<td>8.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+</tr>
+<tr><td>20</td>
+<td>Alamo Bowl</td>
+<td>Texas</td>
+<td>Washington</td>
+<td>4.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>7.5</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>9.75</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>8.0</strong></td>
+<td><strong>9.5</strong></td>
 <td><strong>11.25</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>8.75</strong></td>
 <td><strong>13.0</strong></td>
-<td><strong>12.5</strong></td>
+<td><strong>11.25</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>10.5</strong></td>
 <td><strong>10.0</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>7.0</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>10.75</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>10.5</strong></td>
 </tr>
 </tbody>
 </table>
