Dec. 29th update 1

--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,14 +364,14 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-12-29 23:56:30</em></div>
+<div class="line"><em>Last updated:  2022-12-29 23:59:40</em></div>
 <div class="line"><em>Last bowl scored:  Alamo Bowl (Texas vs. Washington)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Bugaroo 17.25</strong></div>
 <div class="line">2. <strong>GlamKam 15.0</strong></div>
-<div class="line">3. MamaLonghorn 14.5</div>
-<div class="line">4. <strong>Badgers 14.0</strong></div>
+<div class="line">3. <strong>MamaLonghorn 14.5</strong></div>
+<div class="line">4. Badgers 14.0</div>
 <div class="line">4. Sure Thing Shipley 14.0</div>
 <div class="line">6. bopper 13.25</div>
 <div class="line">7. Amanda 13.0</div>
@@ -381,9 +381,9 @@ ul.auto-toc {
 <div class="line">10. Bad News Bibby 11.25</div>
 <div class="line">12. Gigi 10.75</div>
 <div class="line">13. Bear-in-Law 10.5</div>
-<div class="line">13. <strong>W2D2 10.5</strong></div>
+<div class="line">13. W2D2 10.5</div>
 <div class="line">15. blue orred 10.0</div>
-<div class="line">16. #mamabear 9.5</div>
+<div class="line">16. <strong>#mamabear 9.5</strong></div>
 </div>
 </div>
 </body>
