--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,26 +364,26 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-12-29 23:59:40</em></div>
-<div class="line"><em>Last bowl scored:  Alamo Bowl (Texas vs. Washington)</em></div>
+<div class="line"><em>Last updated:  2022-12-30 22:44:49</em></div>
+<div class="line"><em>Last bowl scored:  Orange Bowl (Clemson vs. Tennessee)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Bugaroo 17.25</strong></div>
-<div class="line">2. <strong>GlamKam 15.0</strong></div>
-<div class="line">3. <strong>MamaLonghorn 14.5</strong></div>
-<div class="line">4. Badgers 14.0</div>
-<div class="line">4. Sure Thing Shipley 14.0</div>
-<div class="line">6. bopper 13.25</div>
-<div class="line">7. Amanda 13.0</div>
-<div class="line">8. D-bo 12.25</div>
-<div class="line">9. NIL 12.0</div>
-<div class="line">10. Aggie Austin 11.25</div>
-<div class="line">10. Bad News Bibby 11.25</div>
-<div class="line">12. Gigi 10.75</div>
-<div class="line">13. Bear-in-Law 10.5</div>
-<div class="line">13. W2D2 10.5</div>
-<div class="line">15. blue orred 10.0</div>
-<div class="line">16. <strong>#mamabear 9.5</strong></div>
+<div class="line">1. Amanda 19.25</div>
+<div class="line">2. Badgers 18.0</div>
+<div class="line">3. <strong>Bugaroo 17.25</strong></div>
+<div class="line">4. <strong>GlamKam 17.0</strong></div>
+<div class="line">4. Sure Thing Shipley 17.0</div>
+<div class="line">6. <strong>MamaLonghorn 16.5</strong></div>
+<div class="line">7. NIL 16.0</div>
+<div class="line">8. Bad News Bibby 15.5</div>
+<div class="line">9. blue orred 15.0</div>
+<div class="line">10. bopper 14.5</div>
+<div class="line">11. Aggie Austin 12.25</div>
+<div class="line">11. D-bo 12.25</div>
+<div class="line">13. Gigi 11.75</div>
+<div class="line">14. Bear-in-Law 11.5</div>
+<div class="line">14. W2D2 11.5</div>
+<div class="line">16. <strong>#mamabear 10.5</strong></div>
 </div>
 </div>
 </body>
