--- a/bowl_pool/2022-2023/results.html
+++ b/bowl_pool/2022-2023/results.html
@@ -852,27 +852,137 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.5</td>
 </tr>
+<tr><td>21</td>
+<td>Duke's Mayo Bowl</td>
+<td>Maryland</td>
+<td>NC State</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>22</td>
+<td>Sun Bowl</td>
+<td>UCLA</td>
+<td>Pitt</td>
+<td>3.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>23</td>
+<td>Gator Bowl</td>
+<td>Notre Dame</td>
+<td>South Carolina</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>24</td>
+<td>Arizona Bowl</td>
+<td>Ohio</td>
+<td>Wyoming</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>25</td>
+<td>Orange Bowl</td>
+<td>Clemson</td>
+<td>Tennessee</td>
+<td>6.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>9.5</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>14.0</strong></td>
 <td><strong>10.5</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>17.25</strong></td>
 <td><strong>12.25</strong></td>
-<td><strong>10.75</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>11.5</strong></td>
 <td><strong>15.0</strong></td>
 <td><strong>14.5</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>10.5</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>11.5</strong></td>
 </tr>
 </tbody>
 </table>
