Orange Bowl update w/ highlights

--- a/bowl_pool/2022-2023/rankings.html
+++ b/bowl_pool/2022-2023/rankings.html
@@ -364,16 +364,16 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2022-12-30 22:44:49</em></div>
+<div class="line"><em>Last updated:  2022-12-30 22:49:47</em></div>
 <div class="line"><em>Last bowl scored:  Orange Bowl (Clemson vs. Tennessee)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Amanda 19.25</div>
-<div class="line">2. Badgers 18.0</div>
+<div class="line">1. <strong>Amanda 19.25</strong></div>
+<div class="line">2. <strong>Badgers 18.0</strong></div>
 <div class="line">3. <strong>Bugaroo 17.25</strong></div>
-<div class="line">4. <strong>GlamKam 17.0</strong></div>
+<div class="line">4. GlamKam 17.0</div>
 <div class="line">4. Sure Thing Shipley 17.0</div>
-<div class="line">6. <strong>MamaLonghorn 16.5</strong></div>
+<div class="line">6. MamaLonghorn 16.5</div>
 <div class="line">7. NIL 16.0</div>
 <div class="line">8. Bad News Bibby 15.5</div>
 <div class="line">9. blue orred 15.0</div>
